@@ -168,7 +168,7 @@
 		};
 		29B97323FDCFA39411CA2CEA = {
 			children = (
-				F60DD8D00358A5D701C8ED3C,
+				77AD46F403ECA7E2004B557F,
 				29B97324FDCFA39411CA2CEA,
 				1058C7A1FEA54F0111CA2CBB,
 				29B97325FDCFA39411CA2CEA,
@@ -319,6 +319,29 @@
 //4A2
 //4A3
 //4A4
+//770
+//771
+//772
+//773
+//774
+		77AD46F403ECA7E2004B557F = {
+			includeInIndex = 1;
+			isa = PBXFolderReference;
+			name = PyObjC;
+			path = "/usr/lib/python2.2/site-packages/PyObjC";
+			refType = 0;
+		};
+		77AD475703ECA800004B557F = {
+			fileRef = 77AD46F403ECA7E2004B557F;
+			isa = PBXBuildFile;
+			settings = {
+			};
+		};
+//770
+//771
+//772
+//773
+//774
 //F60
 //F61
 //F62
@@ -354,66 +377,15 @@
 			settings = {
 			};
 		};
-		F60DD8D00358A5D701C8ED3C = {
-			children = (
-				F60DD8D10358A60901C8ED3C,
-				F60DD8D80358A60901C8ED3C,
-				F60DD8DD0358A60901C8ED3C,
-			);
-			isa = PBXGroup;
-			name = pyobjc;
-			refType = 4;
-		};
-		F60DD8D10358A60901C8ED3C = {
-			includeInIndex = 1;
-			isa = PBXFolderReference;
-			name = AppKit;
-			path = "/usr/lib/python2.2/site-packages/AppKit";
-			refType = 0;
-		};
-		F60DD8D80358A60901C8ED3C = {
-			includeInIndex = 1;
-			isa = PBXFolderReference;
-			name = Foundation;
-			path = "/usr/lib/python2.2/site-packages/Foundation";
-			refType = 0;
-		};
-		F60DD8DD0358A60901C8ED3C = {
-			includeInIndex = 1;
-			isa = PBXFolderReference;
-			name = objc;
-			path = "/usr/lib/python2.2/site-packages/objc";
-			refType = 0;
-		};
 		F60DD8ED0358A61B01C8ED3C = {
 			buildActionMask = 8;
-			dstPath = pyobjc;
+			dstPath = "";
 			dstSubfolderSpec = 7;
 			files = (
-				F60DD8EE0358A62701C8ED3C,
-				F60DD8EF0358A62701C8ED3C,
-				F60DD8F00358A62701C8ED3C,
+				77AD475703ECA800004B557F,
 			);
 			isa = PBXCopyFilesBuildPhase;
 			runOnlyForDeploymentPostprocessing = 1;
-		};
-		F60DD8EE0358A62701C8ED3C = {
-			fileRef = F60DD8D10358A60901C8ED3C;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
-		F60DD8EF0358A62701C8ED3C = {
-			fileRef = F60DD8D80358A60901C8ED3C;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
-		F60DD8F00358A62701C8ED3C = {
-			fileRef = F60DD8DD0358A60901C8ED3C;
-			isa = PBXBuildFile;
-			settings = {
-			};
 		};
 	};
 	rootObject = 29B97313FDCFA39411CA2CEA;
